@@ -1,6 +1,7 @@
 python-apt (0.8.0~exp1) UNRELEASED; urgency=low
 
   * Disable the old-style API, and break all packages using it
+  * Add an 'is_multi_arch' attribute to apt_pkg.Cache 
 
  -- Julian Andres Klode <jak@debian.org>  Tue, 05 Apr 2011 10:33:54 +0200
 
